sort.pancake.BubblePancake.scala.error
Compilation error:
BubblePancake:6: error: not found: value indice
  retourne(indice+2)
           ^BubblePancake:8: error: not found: value indice
  retourne(indice+2)
           ^BubblePancake:12: error: type mismatch;
 found   : Unit
 required: Boolean
def plusPetit(indiceHaut:Int): Boolean = {
                                         ^