sort.pancake.BubblePancake.scala.code
def switch(indiceHaut:Int) {
  
  //switch la crèpe indiceHaut avec indicaHaut+1, sans toucher au reste
  
  retourne(indice+2)
  retourne(2)
  retourne(indice+2)
  
}

def plusPetit(indiceHaut:Int): Boolean = {
  
  //Renvoie si indiceHaut est plus petit que indiceHaut+1
  
}
def solve() {
  
  for (c <- 0 to getTaillePile()-1) {
    
    for (x <- getTaillePile() to c by -1) {
      
      if (!plusPetit(x)) {
        
        switch(x)
        
      }
      
    }
    
  }
  
}